fix: added the right routes to the controllers
